--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
     </head>
     <body>
         <div>HELLO</div>
-<<<<<<< HEAD
-        <h1>dish</h1>
-=======
->>>>>>> 8434b22... first commit
+        <h3>privet</h3>
     </body>
 </html>
