--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./css/style.css    ">
+        <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
-        <div>HELLO</div>
-        <h3>privet</h3>
+        <header class="content">
+            <a href="/" class="logo">
+                <img src="./img/logo.png"/>
+            </a>
+        </header>
     </body>
 </html>
